static/dashboard.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* background-image: url("./3348264.jpg");
    background-size: cover;
    overflow: hidden;
    background-color: #d6cfe5; 
    color: #333;
    overflow-y: scroll; */
    background-color: rgb(18, 0, 32);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.parallax {
    background-image: url("./3348264.jpg");
    width: 100vw;
    min-height: 100vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.title {
    padding: 20px 0;
    position: relative;
} 
.title h1 {
    float: left;
    font-size: 2rem;
    margin-left: 47vw;
    color: #fff;
    margin-top: 0px;
}
::-webkit-scrollbar {
    width: 0px;
    background: transparent; 
} 
.parent {
    display: inline-flex
}
.sub-parent {
    display: inline-block;
    margin-right: 20vw;
}
.container {
    max-width: 960px;
    margin: 2vh 20px auto 20vw;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 0;
    background-color: rgba(255, 255, 255, 0.8);
    width: 28vw;
    min-width: 400px;
    border-radius: 25px;
    min-height: 85vh;
}
.header {
    text-align: center;
    margin-bottom: 20px;
}
.mini-calendar {
    max-width: 960px;
    float: inline-end;
    margin: 2vh auto auto auto;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 200px;
    background-color: rgba(255, 255, 255, 0.8);
    width: 35vw;
    max-height: 100px;
    min-width: 400px;
    border-radius: 25px;
}
.container2 {
    max-width: 960px;
    float: right;
    margin: 20px auto auto auto;
    position: relative;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: rgba(255, 255, 255, 0.8);
    width: 35vw;
    min-width: 400px;
    border-radius: 25px;
    min-height: 5vh;
}

h1 {
    font-size: 1.5rem;
    text-align: left;
    color: #29203f;
    margin-bottom: 20px;
} 

.task-list {
    list-style-type: none;
    padding: 0;
    overflow-y: hidden;
}
.date {
    font-size: 1.1rem;
    margin-bottom: 10px;
    color: #666;
    font-weight: 200;
}
.task {
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease;
}
.task p {
    font-size: 1.1rem;
    color: #666;
    align-items: left; 
}
.task span {
    font-size: 1.1rem;
    color: #666;
    align-items: left; 
}
.task p1 {
    font-size: 1.4rem;
    font-weight: 600;
    color: #29203f; 
}
.vl {
    border-left: 4px solid  rgb(15,0,85);
    height: 80px;
    position: relative;
    left: 135px; 
    top: 0;
    float: left;
}
.task-item {
    position: relative;
    left: 56px;
}
.priority {
    position: relative;
    left: 100px;
}
.add-task-btn {
    margin-top: 20px;
}
.fa {
    float: left;
    margin-top: 20px;
    margin-left: 20px;
    font-size: 25px;
    color: #bfbfbf;
    opacity: 1;
}
.fa:hover {
    cursor: pointer;
}
.activity-list {
    list-style-type: none;
    padding: 0;
    overflow-y: hidden;
}
.activity {
    padding: 5px;
}
.activity p {
    font-size: 0.9rem;
    color: #666;
    align-items: left; 
}
.activity span {
    color: #666;
    align-items: left; 
}
.activity p1 {
    float: left;
    font-weight: 600;
    margin-right: 5px;
    margin-left: 0;
    color: #29203f; 

}
.activity p2 {
    float: left;
    margin-right: 5px;
    margin-left: 0;
    font-weight: 600;
    color: #29203f; 
}
.vl {
    border-left: 4px solid  rgb(15,0,85);
    height: 80px;
    position: relative;
    left: 135px; 
    top: 0;
    float: left;
}
.activity-item {
    position: relative;
    left: 56px;
}
/* The side navigation menu */
.sidenav {
    height: 100%; /* 100% Full-height */
    min-width: 200px;
    width: 18vw; 
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: rgba(64, 55, 67, 0.5); /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
padding: 8px 8px 8px 32px;
text-decoration: none;
font-size: 30px;
color: #a2a2a2;
display: block;
transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
color: #f2f2f2;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
position: absolute;
top: 0;
right: 25px;
font-size: 36px;
margin-left: 50px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
transition: margin-left .5s;
padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
.sidenav {padding-top: 15px;}
.sidenav a {font-size: 18px;}
}

#calendar {
    width: 100%;
    height: 290px;
    margin: 0 auto;
    font-size: .7em;
}
.fc-header-title h2 {
    font-size: .9em;
    white-space: normal !important;
}
.fc-view-month .fc-event, .fc-view-agendaWeek .fc-event {
    font-size: 0;
    height: 2px;
}
.fc-view-agendaWeek .fc-event-vert {
    font-size: 0;
    width: 2px !important;
}
.fc-agenda-axis {
    width: 20px !important;
    font-size: .7em;
}

.fc-button-content {
    padding: 0;
}

:root {
    --fc-button-text-color: #fff; 
    --fc-button-bg-color:  rgb(18, 0, 32);
    --fc-button-border-color:  rgb(18, 0, 32); 
    --fc-button-hover-bg-color:  rgba(64, 55, 67, 0.7);
    --fc-button-hover-border-color:  rgba(64, 55, 67, 0.7);
    --fc-button-active-bg-color:  rgb(18, 0, 32);
    --fc-button-active-border-color:   rgb(18, 0, 32);
}

